[Bug #20743] Split `RUBY_DEBUG_LOG_FILTER` with `ruby_each_words`